# CDQ

./: .env  .gitignore  Makefile  README.md  pyproject.toml
docker-compose/: stack.yaml
src/cdq/analytics/api/: app.py
src/cdq/analytics/api/models/: report_params.py
src/cdq/analytics/cli/: report_generate.py
src/cdq/analytics/reporting/: __init__.py  handlers.py  job.py  main.py  report.py  request.py  response.py
src/cdq/analytics/reporting/models/: __init__.py  business_partner.py
src/cdq/analytics/resources/: __init__.py  lookup.py  reports.py
src/cdq/configuration/: __init__.py  base.py  properties.py
src/cdq/data_processing/: __init__.py  main.py
src/cdq/dto/: __init__.py  base.py  fileinfo.py  resource.py  schema.py
src/cdq/environment/: __init__.py  base.py
src/cdq/infra/airflow/: __init__.py
src/cdq/infra/mongodb/: __init__.py  base.py
tests/: conftest.py  util.py
tests/data/: storage_one.json
tests/test_api/: test_api.py
tests/test_cli/: test_report_generate.py
tests/test_configuration/: test_configuration.py
tests/test_data_processing/: test_data_processing.py
tests/test_reporting/: test_main.py
